@@ -9,6 +9,9 @@
 - ADD: Merging of two instead of just one URL. (Stefan)
 - ADD: Paths with short filenames now work too when
        starting TortoiseProc from external programs. (Stefan)
+- ADD: Comparing an older revision with the working copy
+       on folders. TME is started for this in patch mode
+       to avoid "ugly" unified diffs. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
        with a blue background for better indication. (Stefan)
 - CHG: When showing the log in the merge dialog, it will
